--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">MsgShareApp</string>
     <string name="show_toast">Show Toast</string>
+    <string name="write_your_message">Write your Message</string>
+    <string name="send_message_to_another_activity">Send Message to another activity</string>
+    <string name="share_message_to_another_app">Share Message To another App</string>
+    <string name="recycler_view_demo">Recycler View Demo</string>
+    <string name="textview">TextView</string>
+    <string name="hello">Hello</string>
+    <string name="sorry_for_interruption">Sorry for interruption</string>
 </resources>
